ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-to-do-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: basic-to-do-alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:cert-arn
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: basic-to-do
spec:
  ingressClassName: alb
  rules:
  - host: volk.baby
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basic-to-do-client
            port:
              number: 80
  - host: api.volk.baby
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basic-to-do-server
            port:
              number: 3000
